<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="calculadoraDeRiesgoVM" type="com.carlosabrahammenndezilhuicatzisapplication.app.modules.calculadoraderiesgo.data.viewmodel.CalculadoraDeRiesgoVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearCalculadorade"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_200">
        <androidx.appcompat.widget.Toolbar android:gravity="start"
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:contentInsetStart="0dp" style="@style/groupStylered_901">
            <LinearLayout android:gravity="center_vertical"
                android:id="@+id/linearRowmenu"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_18pxv"
                android:layout_marginEnd="@dimen/_11pxh"
                android:layout_marginStart="@dimen/_52pxh"
                android:layout_marginTop="@dimen/_18pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageMenu"
                    android:layout_height="@dimen/_32pxh"
                    android:layout_marginBottom="@dimen/_2pxv"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_width="@dimen/_32pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_menu"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_menu"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtCalculadorade"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_3pxh"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_weight="0.63"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{calculadoraDeRiesgoVM.calculadoraDeRiesgoModel.txtCalculadorade}"
                    style="@style/txtBaloo2regular20_1" tools:text="@string/msg_calculadora_de"/>
                <ImageView android:id="@+id/imageLogoDIROne"
                    android:layout_height="@dimen/_62pxh"
                    android:layout_width="@dimen/_77pxh"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_logodir1}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_logodir1"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <LinearLayout android:gravity="end"
            android:id="@+id/linearColumnmarcalasenfer"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_26pxh"
            android:layout_marginStart="@dimen/_28pxh"
            android:layout_marginTop="@dimen/_33pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylegray_300_cccornerRadius">
            <TextView android:ellipsize="end" android:gravity="center"
                android:id="@+id/txtMarcalasenfer"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_31pxh"
                android:layout_marginStart="@dimen/_17pxh"
                android:layout_marginTop="@dimen/_11pxv"
                android:layout_width="match_parent"
                android:singleLine="false"
                android:text="@{calculadoraDeRiesgoVM.calculadoraDeRiesgoModel.txtMarcalasenfer}"
                style="@style/txtBaloo2bold20" tools:text="@string/msg_marca_las_enfer"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowdiabetes"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_27pxh"
                android:layout_marginStart="@dimen/_8pxh"
                android:layout_marginTop="@dimen/_50pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtDiabetes"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{calculadoraDeRiesgoVM.calculadoraDeRiesgoModel.txtDiabetes}"
                    style="@style/txtBaloo2regular20" tools:text="@string/lbl_diabetes"/>
                <View
                    android:background="@drawable/rectangle_bg_white_a700_border_black_900"
                    android:id="@+id/viewRectangleTwentyEight"
                    android:layout_height="@dimen/_30pxh"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_163pxh"
                    android:layout_marginTop="@dimen/_1pxv" android:layout_width="@dimen/_32pxh"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowpresinarteria"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_27pxh"
                android:layout_marginStart="@dimen/_8pxh"
                android:layout_marginTop="@dimen/_22pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtPresinarteria"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.84"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{calculadoraDeRiesgoVM.calculadoraDeRiesgoModel.txtPresinarteria}"
                    style="@style/txtBaloo2regular20" tools:text="@string/msg_presi_n_arteria"/>
                <View
                    android:background="@drawable/rectangle_bg_white_a700_border_black_900"
                    android:id="@+id/viewRectangleTwentySeven"
                    android:layout_height="@dimen/_30pxh"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_71pxh"
                    android:layout_marginTop="@dimen/_2pxv" android:layout_width="@dimen/_32pxh"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowinsuficienciac"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_27pxh"
                android:layout_marginStart="@dimen/_8pxh"
                android:layout_marginTop="@dimen/_23pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtInsuficienciac"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.85"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{calculadoraDeRiesgoVM.calculadoraDeRiesgoModel.txtInsuficienciac}"
                    style="@style/txtBaloo2regular20" tools:text="@string/msg_insuficiencia_c"/>
                <View
                    android:background="@drawable/rectangle_bg_white_a700_border_black_900"
                    android:id="@+id/viewRectangleTwentySix"
                    android:layout_height="@dimen/_30pxh"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_53pxh"
                    android:layout_marginTop="@dimen/_2pxv" android:layout_width="@dimen/_32pxh"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowenfermedadeshe"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_27pxh"
                android:layout_marginStart="@dimen/_8pxh"
                android:layout_marginTop="@dimen/_24pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="none"
                    android:id="@+id/txtEnfermedadeshe"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.87"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{calculadoraDeRiesgoVM.calculadoraDeRiesgoModel.txtEnfermedadeshe}"
                    style="@style/txtBaloo2regular20" tools:text="@string/msg_enfermedades_he"/>
                <View
                    android:background="@drawable/rectangle_bg_white_a700_border_black_900"
                    android:id="@+id/viewRectangleTwentyFive"
                    android:layout_height="@dimen/_30pxh"
                    android:layout_marginBottom="@dimen/_2pxv"
                    android:layout_marginStart="@dimen/_27pxh"
                    android:layout_marginTop="@dimen/_1pxv" android:layout_width="@dimen/_32pxh"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowenfermedadesre"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_27pxh"
                android:layout_marginStart="@dimen/_8pxh"
                android:layout_marginTop="@dimen/_21pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="none"
                    android:id="@+id/txtEnfermedadesre"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.86"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{calculadoraDeRiesgoVM.calculadoraDeRiesgoModel.txtEnfermedadesre}"
                    style="@style/txtBaloo2regular20" tools:text="@string/msg_enfermedades_re"/>
                <View
                    android:background="@drawable/rectangle_bg_white_a700_border_black_900"
                    android:id="@+id/viewRectangleTwentyNine"
                    android:layout_height="@dimen/_30pxh"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_47pxh"
                    android:layout_marginTop="@dimen/_2pxv" android:layout_width="@dimen/_32pxh"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowtratamientosde"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_27pxh"
                android:layout_marginStart="@dimen/_8pxh"
                android:layout_marginTop="@dimen/_23pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtTratamientosde"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.86"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{calculadoraDeRiesgoVM.calculadoraDeRiesgoModel.txtTratamientosde}"
                    style="@style/txtBaloo2regular20" tools:text="@string/msg_tratamientos_de"/>
                <View
                    android:background="@drawable/rectangle_bg_white_a700_border_black_900"
                    android:id="@+id/viewRectangleThirty"
                    android:layout_height="@dimen/_30pxh"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_37pxh"
                    android:layout_marginTop="@dimen/_1pxv" android:layout_width="@dimen/_32pxh"/>
            </LinearLayout>
            <FrameLayout android:id="@+id/frameStackrectanglefourteen"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_34pxv"
                android:layout_marginBottom="@dimen/_17pxv"
                android:layout_marginEnd="@dimen/_17pxh"
                android:layout_marginStart="@dimen/_17pxh"
                android:layout_marginTop="@dimen/_40pxv" android:layout_width="@dimen/_125pxh">
                <View android:background="@color/pink_900"
                    android:id="@+id/viewRectangleFourteen"
                    android:layout_gravity="top|start"
                    android:layout_height="@dimen/_34pxv"
                    android:layout_marginBottom="@dimen/_10pxv" android:layout_width="@dimen/_125pxh"/>
                <TextView android:ellipsize="end"
                    android:gravity="top|start"
                    android:id="@+id/txtAceptar"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_28pxh"
                    android:layout_marginStart="@dimen/_28pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{calculadoraDeRiesgoVM.calculadoraDeRiesgoModel.txtAceptar}"
                    style="@style/txtBaloo2regular20_1" tools:text="@string/lbl_aceptar"/>
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
